# tuesday-trials-grid

./: .env  Cargo.toml  GameDeduplication.csv  MiscData.csv  Rename.csv  StreamData.csv  schema.graphql
src/: CreateDatabase.sql  GridQueries.toml  db_builder.rs  grid_builder.rs  main.rs
src/queries/: GetParticipants.graphql  GetSets.graphql  GetTournaments.graphql  getTrialsEntrants.gql  queries.txt
web/: package-lock.json  package.json
