[package]
name = "TuesdayTrialsGrid"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "1.44.2", features = ["full"]}
graphql_client = { git = "https://github.com/graphql-rust/graphql-client/" }
futures = "*"
rusqlite = { version = "0.34.0", features = ["bundled"] }
toml = "*"
rand = "*"
